--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ li {
     color: green;
 }
 
-.reviews {
+main p {
     line-height: 150%;
     background-color: lightgray;
 }
@@ -57,4 +57,8 @@ a:visited {
 a:hover { 
     text-decoration: none; 
     color:red; 
+}
+
+#round-goofy {
+    border-radius: 40%;
 }
